// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton style params color brand 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-144omum-QxRadioButton-root"
    data-testid="testStyleParams-color-brand"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color danger 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_danger QxRadioButton_position_left css-vk91qp-QxRadioButton-root"
    data-testid="testStyleParams-color-danger"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color info 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_info QxRadioButton_position_left css-1bty7e4-QxRadioButton-root"
    data-testid="testStyleParams-color-info"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color secondary 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_secondary QxRadioButton_position_left css-144omum-QxRadioButton-root"
    data-testid="testStyleParams-color-secondary"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color success 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_success QxRadioButton_position_left css-f9dko3-QxRadioButton-root"
    data-testid="testStyleParams-color-success"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params color warning 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_warning QxRadioButton_position_left css-1uz9jjp-QxRadioButton-root"
    data-testid="testStyleParams-color-warning"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params disabled false 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-144omum-QxRadioButton-root"
    data-testid="testStyleParams-disabled-false"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params disabled true 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_disabled QxRadioButton_position_left css-1wk3daj-QxRadioButton-root"
    data-testid="testStyleParams-disabled-true"
  >
    <input
      class="QxRadioButton-input css-l1mh22-QxRadioButton-input"
      disabled=""
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-5va3tq-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1wnrinn-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params position left 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-144omum-QxRadioButton-root"
    data-testid="testStyleParams-position-left"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params position right 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_right css-144omum-QxRadioButton-root"
    data-testid="testStyleParams-position-right"
  >
    <div
      class="QxRadioButton-content css-1q0pet1-QxRadioButton-content"
    >
      Статус
    </div>
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params size large 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_large QxRadioButton_color_brand QxRadioButton_position_left css-j4p5ax-QxRadioButton-root"
    data-testid="testStyleParams-size-large"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-syp2gq-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params size medium 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_medium QxRadioButton_color_brand QxRadioButton_position_left css-144omum-QxRadioButton-root"
    data-testid="testStyleParams-size-medium"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ib3xdh-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;

exports[`RadioButton style params size small 1`] = `
<DocumentFragment>
  <label
    class="QxRadioButton QxRadioButton_size_small QxRadioButton_color_brand QxRadioButton_position_left css-1ktbjoq-QxRadioButton-root"
    data-testid="testStyleParams-size-small"
  >
    <input
      class="QxRadioButton-input css-102mk4h-QxRadioButton-input"
      type="radio"
      value=""
    />
    <div
      class="QxRadioButton-marker css-n013xa-QxRadioButton-marker"
    >
      <div
        class="QxRadioButton-markerDot css-1cuw3c2-QxRadioButton-markerDot"
      />
    </div>
    <div
      class="QxRadioButton-content css-1ifxpc8-QxRadioButton-content"
    >
      Статус
    </div>
  </label>
</DocumentFragment>
`;
